22 January 2018: Wouter
	- Accept tls-upstream in unbound.conf, the ssl-upstream keyword is
	  also recognized and means the same.  Also for tls-port,
	  tls-service-key, tls-service-pem, stub-tls-upstream and
	  forward-tls-upstream.

19 January 2018: Wouter
	- tag 1.6.8 for release with CVE fix.
	- trunk has 1.6.9 with fix and previous commits.
	- patch for CVE-2017-15105: vulnerability in the processing of
	  wildcard synthesized NSEC records.
	- iana port update.
	- make depend: code dependencies updated in Makefile.

4 January 2018: Ralph
	- Copy query and correctly set flags on REFUSED answers when cache
	  snooping is not allowed.

3 January 2018: Ralph
	- Fix queries being leaked above stub when refetching glue.

2 January 2017: Wouter
	- Fix that DS queries with referral replies are answered straight
	  away, without a repeat query picking the DS from cache.
	  The correct reply should have been an answer, the reply is fixed
	  by the scrubber to have the answer in the answer section.
	- Remove clang optimizer disable,
	  Fix that expiration date checks don't fail with clang -O2.

15 December 2017: Wouter
	- Fix timestamp failure because of clang optimizer failure, by
	  disabling -O2 when the compiler --version is clang.
	- iana port update.
	- Also disable -flto for clang, to make incep-expi signature check
	  work.

12 December 2017: Ralph
	- Fix qname-minimisation documentation (A QTYPE, not NS)

12 December 2017: Wouter
	- authzone work, transfer connect.

7 December 2017: Ralph
	- Check whether --with-libunbound-only is set when using --with-nettle
	  or --with-nss.

4 December 2017: Wouter 
	- Fix link failure on OmniOS.

1 December 2017: Wouter 
	- auth zone work.

30 November 2017: Wouter 
	- Fix #3299 - forward CNAME daisy chain is not working

14 November 2017: Wouter 
	- Fix #2882: Unbound behaviour changes (wrong) when domain-insecure is
	  set for stub zone.  It no longer searches for DNSSEC information.