@@ -3,6 +3,7 @@
 	  also recognized and means the same.  Also for tls-port,
 	  tls-service-key, tls-service-pem, stub-tls-upstream and
 	  forward-tls-upstream.
+	- Fix #3397: Fix that cachedb could return a partial CNAME chain.
 
 19 January 2018: Wouter
 	- tag 1.6.8 for release with CVE fix.
